Changed npm name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngn-windows",
+  "name": "node-windows",
   "version": "0.0.1",
   "description": "Support for Windows",
   "keywords": ["ngn","windows"],
