--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-windows",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Support for Windows",
   "keywords": [
     "ngn",
@@ -13,7 +13,8 @@
   },
   "main": "lib/node-windows.js",
   "dependencies": {
-    "windows-eventlog": "~0.1.4"
+    "windows-eventlog": "~0.1.4",
+    "optimist": "~0.3.5"
   },
   "readmeFilename": "Readme.md",
   "gitHead": "5d15383c2b724a06ec6e343379fca6f5a75c0117",
