--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-windows",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Support for Windows services, event logging, UAC, and several helper methods for interacting with the OS.",
   "keywords": [
     "ngn",
@@ -17,7 +17,9 @@
   "author": "Corey Butler <corey@coreybutler.com>",
   "devDependencies": {},
   "main": "lib/node-windows.js",
-  "os": ["win32"],
+  "os": [
+    "win32"
+  ],
   "preferGlobal": true,
   "dependencies": {
     "optimist": "~0.3.5"
@@ -29,5 +31,5 @@
     "url": "git://github.com/coreybutler/node-windows.git"
   },
   "license": "MIT",
-  "engine":"node >= 0.10.10"
+  "engine": "node >= 0.10.10"
 }
