adding xml dependency

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   ],
   "preferGlobal": true,
   "dependencies": {
-    "optimist": "~0.6.0"
+    "optimist": "~0.6.0",
+    "xml": "0.0.12"
   },
   "readmeFilename": "README.md",
   "scripts": {},
