--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
+github: [coreybutler]
 patreon: coreybutler
 open_collective: # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi username
