--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-windows",
-  "version": "0.1.14",
+  "version": "1.0.0-beta.1",
   "description": "Support for Windows services, event logging, UAC, and several helper methods for interacting with the OS.",
   "keywords": [
     "ngn",
