--- a/bin/winsw/winsw.exe.config
+++ b/bin/winsw/winsw.exe.config
@@ -1,6 +1,6 @@
 <configuration>
 	<startup>
-		<supportedRuntime version="v2.0.50727" />
+		<supportedRuntime version="v3.0.0-alpha9" />
 		<supportedRuntime version="v4.0" />
 	</startup>
 </configuration>
