--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-windows",
-  "version": "1.0.0-beta.7",
+  "version": "1.0.0-beta.8",
   "description": "Support for Windows services, event logging, UAC, and several helper methods for interacting with the OS.",
   "keywords": [
     "ngn",
@@ -18,8 +18,8 @@
   "main": "lib/node-windows.js",
   "preferGlobal": true,
   "dependencies": {
-    "@author.io/arg": "1.3.22",
-    "xml": "1.0.1"
+    "xml": "1.0.1",
+    "yargs": "^17.5.1"
   },
   "readmeFilename": "README.md",
   "scripts": {},
